[package]
name = "dndtree"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
description = "DND-Tree dynamic connectivity data structure"
repository = "https://github.com/Thell/dndtree"
documentation = "https://docs.rs/dndtree"

[lib]
name = "dndtree"
crate-type = ["rlib", "cdylib"]

[dependencies]
fixedbitset = "0.5"
nohash-hasher = "0.2.0"
smallvec = "1.15.1"

[dev-dependencies]
divan = "0.1.21"
idtree = "0.1.2"
rand = "0.10.0"

[[bench]]
name = "bench"
harness = false
