[package]
name = "dndtree"
version = "0.2.0"
edition = "2024"
license = "Unlicense"
description = "DND-Tree dynamic connectivity data structure"
repository = "https://github.com/Thell/dndtree"
documentation = "https://docs.rs/dndtree"

[lib]
name = "dndtree"
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true

[dependencies]
cxx = "1.0"
fixedbitset = "0.5"
log = "0.4.29"
nohash-hasher = "0.2.0"
simple_logger = "5.2.0"
smallvec = "1.15.1"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
hdrhistogram = "7.5.4"
idtree = "0.2.0"
rand = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"

[[bench]]
name = "bench"
harness = false
