[package]
name = "dndtree"
version = "0.3.1"
edition = "2024"
license = "Unlicense"
description = "DND-Tree dynamic connectivity data structure"
repository = "https://github.com/Thell/dndtree"
documentation = "https://docs.rs/dndtree"

[lib]
name = "dndtree"
crate-type = ["rlib", "cdylib"]

[profile.release]
debug = true

[dependencies]
fixedbitset = "0.5"
log = "0.4.29"
nohash-hasher = "0.2.0"
simple_logger = "5.2.0"
smallvec = "1.15.1"

cxx = { version = "1.0", optional = true }
pyo3 = { version = "0.23.2", optional = true, features = ["extension-module"] }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[dev-dependencies]
idtree = "0.3.1"
rand = "0.10.0"
hdrhistogram = "7.5.4"
serde = { version = "1.0", features = ["derive"] }
statrs = "0.18.0"

[features]
default = []
python = ["pyo3"]
cpp = ["dep:cxx", "dep:cxx-build"]

[[bench]]
name = "bench_dndtree"
harness = false

[[bench]]
name = "bench_cpp_dndtree"
harness = false
